--- a/house_price_keen_keras.ipynb
+++ b/house_price_keen_keras.ipynb
@@ -740,7 +740,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Compare the Price and prediction Price** "
+        "**Compare Prediction Price to the SalePrice form the training dataset** "
       ],
       "metadata": {
         "id": "GE28IidmXgqT"
