--- a/house_price_keen_keras_870epochs.ipynb
+++ b/house_price_keen_keras_870epochs.ipynb
@@ -73,18 +73,6 @@
       "execution_count": 114,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:5: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-            "  \"\"\"\n",
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:6: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-            "  \n",
-            "/usr/local/lib/python3.7/dist-packages/seaborn/distributions.py:2619: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).\n",
-            "  warnings.warn(msg, FutureWarning)\n"
-          ]
-        },
-        {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
@@ -2151,7 +2139,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Compare the Price and prediction Price** "
+        "**Compare the Predicted Price with the SalePrice** "
       ],
       "metadata": {
         "id": "GE28IidmXgqT"
