--- a/house_price_keen_keras_870epochs.ipynb
+++ b/house_price_keen_keras_870epochs.ipynb
@@ -2090,7 +2090,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# This model has $23k inaccuracy in the price range of ~800k\n"
+        " This model has $23k inaccuracy in the price range of ~800k\n"
       ],
       "metadata": {
         "id": "v2-D5plK4oKz"
